--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,7 +16,6 @@
 }
 
 
-
 html {
   scroll-behavior: smooth;
 }
@@ -62,6 +61,7 @@ $colorBlack: #121619;
   opacity: 0;
 }
 
+//Scroll-Top
 .scroll-top {
   position: fixed;
   background-color: $colorOrange;
@@ -87,6 +87,43 @@ $colorBlack: #121619;
     font-size: 22px;
   }
 }
+
+//Loader
+.loader-container{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: $colorBlack;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .loader {
+    z-index: 6;
+    position: relative;
+    width: 100px;
+    height: 100px;
+  }
+  
+  .loader:before , .loader:after{
+    content: '';
+    border-radius: 50%;
+    position: absolute;
+    inset: 0;
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3) inset;
+  }
+  .loader:after {
+    box-shadow: 0 2px 0 $colorOrange inset;
+    animation: rotate 2s linear infinite;
+  }
+  
+  @keyframes rotate {
+    0% {  transform: rotate(0)}
+    100% { transform: rotate(360deg)}
+  }
+}
+
+
 
 //Animations
 /*#region Animation*/
